2008-06-18  Vincent Untz  <vuntz@gnome.org>

	* clock.c: (fill_time_settings_window): also select the current day on
	the calendar so that if you open the "set time" dialog on two
	different days, the calendar is always on the current day (and you
	don't accidentaly set time in past)
	Patch by Michael Meeks <michael.meeks@novell.com>.
	https://bugzilla.novell.com/show_bug.cgi?id=395146

==================== 2.23.4 ====================

==================== 2.23.3 ====================

==================== 2.23.2.1 ====================

2008-05-14  Vincent Untz  <vuntz@gnome.org>

	* set-timezone-dummy.c: (set_system_time_async),
	(set_system_timezone_async): add transient_parent_xid parameter

==================== 2.23.2 ====================

2008-05-13  Vincent Untz  <vuntz@gnome.org>

	* clock.c: (run_prefs_locations_add), (edit_tree_row): put the focus in
	the name entry

2008-05-09  Matthias Clasen  <mclasen@redhat.com>

	* clock.c: Disable the "Set System Time" button when we
	don't have the necessary privileges. 

2008-05-08  Federico Mena Quintero  <federico@novell.com>

	* clock.c (set_time): Pass the XID of the applet's windowto
	set_system_time_async().

2008-05-08  Federico Mena Quintero  <federico@novell.com>
	* clock-location.c (clock_location_make_current): Take in a
	transient_parent_xid argument.

	* clock.c (location_start_element): Pass the XID of the applet's
	window to clock_location_make_current().

	* clock-location-tile.c (make_current): Pass XID of the toplevel
	widget's window.

2008-05-08  Federico Mena Quintero  <federico@novell.com>

	https://bugzilla.novell.com/show_bug.cgi?id=384159

	When calling the (obsolete) org.gnome.PolicyKit.Manager.ShowDialog
	method through PolicyKit, pass an XID for the transient parent
	window of what will be the auth dialog.  This prevents the window
	manager from thinking that the auth dialog is a rogue dialog with
	no parent.

	* set-timezone.c (SetTimeCallbackData): Add a transient_parent_xid
	field.